--- a/app/views/admin/infos/_form.html.haml
+++ b/app/views/admin/infos/_form.html.haml
@@ -4,6 +4,7 @@
     = f.input :title
     = f.input :intro
     = f.input :image
+    = f.input :position
     = f.input :published
     ~ f.input :main_body
   = f.submit data: { disable_with: '请稍等...' }
