--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -2,6 +2,8 @@
 
 <div class="videos-content">
   <div class="container">
+    <%= render 'index_web' %>
+
     <div class="video-list">
       <%= render 'video_item' %>
     </div>
