--- a/app/assets/stylesheets/client/videos.scss
+++ b/app/assets/stylesheets/client/videos.scss
@@ -1,5 +1,7 @@
 @import "client/vars";
 .videos-content{
+  a{ text-decoration:none }
+
   font-family:Helvetica;
 
   .video-item{
@@ -83,6 +85,7 @@
   .videos-content{
     .video-title{
       font-size: 23px;
+      line-height: 1.3em;
     }
 
     .video-intro{
@@ -95,7 +98,7 @@
   }
 
   .videos-modal-over{
-    opacity: 0.7;
+    opacity: 0.8;
   }
 
   .video-modal{
@@ -109,5 +112,23 @@
     margin-bottom: 20px;
     float: right;
     cursor: pointer;
+  }
+
+  .top-videos{
+    display: block !important;
+    margin-top: 50px;
+    margin-bottom: 90px;
+
+    .three-videos{
+      margin-top: 30px;
+
+      .video-title{
+        font-size: 20px;
+        line-height: 1.3em;
+        height: 3.9em;
+        overflow: hidden;
+        margin-bottom: 10px;
+      }
+    }
   }
 }
