--- a/app/views/online_pokers/_online_poker_item.html.erb
+++ b/app/views/online_pokers/_online_poker_item.html.erb
@@ -1,4 +1,4 @@
-<% @online_pokers.each do |online_poker| %>
+<% @online_pokers_arr.each do |online_poker| %>
   <div class="row online-poker-item">
     <div class="col-lg-10 poker-main">
       <div class="poker_image">
