--- a/app/views/online_pokers/index.html.erb
+++ b/app/views/online_pokers/index.html.erb
@@ -2,6 +2,7 @@
 
 <div class="online-pokers-content">
   <div class="container">
+    <%= render 'index_web' %>
     <div class="online_poker-list">
       <%= render 'online_poker_item' %>
     </div>
