完成navbar的翻译

--- a/app/assets/stylesheets/client/online_pokers.scss
+++ b/app/assets/stylesheets/client/online_pokers.scss
@@ -130,9 +130,7 @@
       opacity: 0;
     }
 
-    .top-poker-attrs:hover{
-      opacity:0.7277;
-    }
+    .top-poker:hover .top-poker-attrs{ opacity:0.7277; }
 
     .top-play-now-container{
       background:rgba(255,255,255,1);
