完成tournament 部分翻译

--- a/app/views/cg_asia/index.html.erb
+++ b/app/views/cg_asia/index.html.erb
@@ -2,28 +2,26 @@
   <div class="container cg-asia-margin">
     <div class="row cg-asia-item">
       <div class="col-lg-4 cg-asia-title">
-        <div>ABOUT CG-ASIA</div>
+        <div><%= t 'cg_asia.a_title' %> CG-ASIA</div>
         <div class="cg-asia-spacer"></div>
       </div>
 
-
       <div class="col-lg-7 cg-asia-text">
-        Certified Genius Corp (Asia) was founded in August 2016 by Mr. He Junjun, invested by the US dollar fund SIG
-        Heiner Asia, focusing on providing top-notch Asian competitions and peripheral entertainment services to
-        competitive gamers around the world. Officially authorized by the WSOP since 2018. The first WSOP ASIA will be
-        held in April 2019 and will be held in other countries and regions in Asia. Welcome to continue to pay
-        attention.
+        <%= t 'cg_asia.a_text' %>
       </div>
     </div>
 
     <div class="row cg-asia-item cg-asia-item-bottom">
       <div class="col-lg-4 cg-asia-title">
-        <div>Mario Ho</div>
+        <div>
+          <%= raw t 'cg_asia.b_title' %>
+        </div>
       </div>
 
+
       <div class="col-lg-4 cg-asia-text">
-        - CEO at Certified Genius Corp (Asia) <br>
-        - President of Macao E-Sports Federation
+        <%= t 'cg_asia.b_text_1' %> <br>
+        <%= t 'cg_asia.b_text_2' %>
       </div>
 
       <div class="col-lg-4 cg-asia-text cg-asia-avatar-container">
