--- a/app/views/tournament/_main_event_intro.html.erb
+++ b/app/views/tournament/_main_event_intro.html.erb
@@ -1,6 +1,6 @@
 <div id="introduction" class="tab-pane active container">
   <div class="main-event-label d-none">
-    INTRODUCTION.
+    <%= t 'tour.introduction' %>.
   </div>
   <% @main_event.event_intros.each do |intro| %>
     <div class="tour-event-intro">
