--- a/app/views/tournament/_side_event.erb
+++ b/app/views/tournament/_side_event.erb
@@ -1,6 +1,6 @@
 <div id="side_event" class="tab-pane fade">
   <div class="container main-event-label d-none">
-    SIDE EVENT.
+    <%= t 'tour.side_event' %>.
   </div>
   <% if is_mobile? %>
     <% @main_event.side_events.each do |side_event| %>
