--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -4,7 +4,7 @@
   <div class="container">
     <%= render 'index_web' %>
 
-    <div class="more-news d-none">MORE NEWS</div>
+    <div class="more-news d-none"><%= t 'navbar.more_news' %></div>
     <div class="new-list">
       <%= render 'new-item' %>
     </div>
