--- a/app/views/tournament/_side_event.erb
+++ b/app/views/tournament/_side_event.erb
@@ -28,12 +28,12 @@
       <table>
         <thead>
         <tr>
-          <th>Date&Time</th>
-          <th>Event</th>
-          <th>Buyin</th>
-          <th>Chip</th>
-          <th>Guarantee</th>
-          <th>Detail</th>
+          <th><%= t 'tour.date_time' %></th>
+          <th><%= t 'tour.event' %></th>
+          <th><%= t 'tour.buyin' %></th>
+          <th><%= t 'tour.chip' %></th>
+          <th><%= t 'tour.guarantee' %></th>
+          <th><%= t 'tour.detail' %></th>
         </tr>
         </thead>
         <tbody>
