--- a/app/views/online_pokers/_online_pokers_bg.html.erb
+++ b/app/views/online_pokers/_online_pokers_bg.html.erb
@@ -1,6 +1,6 @@
 <div class="news-bg">
   <div class="nes-bg-container">
-    <div class="container">ONLINE POKER</div>
+    <div class="container"><%= t 'navbar.online_poker' %></div>
     <div class="news-bg-spacer"></div>
   </div>
 </div>
