--- a/app/views/tournament/_main_event_schedule.html.erb
+++ b/app/views/tournament/_main_event_schedule.html.erb
@@ -19,11 +19,11 @@
     <table>
       <thead>
       <tr>
-        <th>Date&Time</th>
-        <th>Event</th>
-        <th>Buyin</th>
-        <th>Chip</th>
-        <th>Guarantee</th>
+        <th><%= t 'tour.date_time' %></th>
+        <th><%= t 'tour.event' %></th>
+        <th><%= t 'tour.buyin' %></th>
+        <th><%= t 'tour.chip' %></th>
+        <th><%= t 'tour.guarantee' %></th>
       </tr>
       </thead>
       <tbody>
