--- a/app/views/videos/_videos_bg.html.erb
+++ b/app/views/videos/_videos_bg.html.erb
@@ -1,6 +1,6 @@
 <div class="news-bg">
   <div class="nes-bg-container">
-    <div class="container">VIDEOS</div>
+    <div class="container"><%= t 'navbar.videos' %></div>
     <div class="news-bg-spacer"></div>
   </div>
 </div>
